hphp/test/slow/yield/disposeasync.php.expectf

Fatal error: 'yield' is not allowed in constructor, destructor, or magic methods in %s/disposeasync.php on line 5
